# agent-fun-build

./: AGENTS.md  README.md
file_agent/: README.md  pyproject.toml
file_agent/src/file_agent/: agent.py  main.py  tool_schemas.py
file_agent_manifest/: README.md  pyproject.toml
file_agent_manifest/src/file_agent_manifest/: agent.py  main.py
file_agent_manifest/src/file_agent_manifest/skills/filesystem/: SKILL.md
file_agent_mcp/: .gitignore  README.md  pyproject.toml
file_agent_mcp/src/file_agent_mcp/: agent.py  agent.yaml  main.py  mcp.json  mcp_client.py  mcp_server.py  tool_loader.py
file_agent_mcp_manifest/: pyproject.toml
file_agent_mcp_manifest/src/file_agent_mcp_manifest/: ROLE.md  agent.py  agent.yaml  main.py  tools.py
file_agent_mcp_manifest/src/file_agent_mcp_manifest/skills/summarizer/: SKILL.md
