[project]
name = "file-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.26.0",
 "python-dotenv>=1.2.2",
 "rich>=14.3.3",
]

[project.scripts]
file-agent = "file_agent.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatchling.build.targets.wheel]
packages = ["src/file_agent"]
